--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ServerChannelChat</title>
-  <link rel="stylesheet" href="https://chat.mcgendai.com/style.css">
+  <link rel="stylesheet" href="https://contents.mcgendai.com/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&amp;family=Noto+Sans+JP:wght@400;500;700&amp;family=Fira+Code&amp;display=swap" rel="stylesheet">
 </head>
 <body>
